--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,17 @@
 ---
 
-- name: Install pip
+- name: Install pip (not Archlinux)
+  when: ansible_distribution != 'Archlinux'
   package:
     name: '{{ pip_package_name[ansible_os_family] }}'
     state: present
 
+- name: Install pip (Archlinux)
+  when: ansible_distribution == 'Archlinux'
+  shell: pacman -Sy --noconfirm python-pip
+
 - name: Pip install setuptools
+  when: ansible_distribution != 'Archlinux'
   pip:
     name: setuptools
     state: latest
